# sufficit-android-ai-gateway

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: colloquial-normalization-safe.txt  config.example.json  device-model-guides.json
app/src/main/cpp/: CMakeLists.txt  whisper_jni.c  whisper_jni.cpp
app/src/main/cpp/include/: ggml-backend.h  ggml-rpc.h  ggml.h
app/src/main/res/drawable/: ic_launcher.xml  ic_mic_status.xml
docs/: 202603241016-android-settings-backup-and-speaker-history.md  202603241021-centralized-gateway-defaults-asset.md  202603241039-dashboard-transcript-stack-and-spectrum-layout.md  202603241146-android-stop-local-discard-and-send-signals.md  202603241157-voice-friendly-replies-and-response-fade.md  202603241230-dynamic-ambient-noise-gate-before-transcription.md  202603241310-android-websocket-settings-patch.md  202603241650-dashboard-blocking-announcement-and-split-queues.md  202603241720-dashboard-top-controls-and-local-confidence.md  202603241910-openclaw-response-card-separated-from-transcript.md  202603241945-remove-learning-progress-from-openclaw-metadata.md  202606121052-lip-activity-speaker-verification.md  PLAN-20260520-camera-gesture-vision.md  PLAN-architeture-migration.md  USAGE-202605231010-android-kotlin-architecture-collection.md  android-testing.md  architecture.md  engineering-guidelines.md  http-control-api.md  on-device-whisper-vulkan.md  roadmap.md
(+177 files in other folders)
